fixed padding and title on mobile devices

--- a/Portfolio.Frontend/src/styles/components/_responsive.scss
+++ b/Portfolio.Frontend/src/styles/components/_responsive.scss
@@ -18,7 +18,7 @@
     .large-visible{
     display: visible;
     }
-    .small-visible{
+    .large-hidden, .small-visible{
       display: none;
     }
   }
