--- a/Portfolio.Frontend/src/styles/components/_singleProject.scss
+++ b/Portfolio.Frontend/src/styles/components/_singleProject.scss
@@ -1,6 +1,3 @@
-// @import "../settings";
-// @import "../app.scss";
-
 .details-bg{
     background: $light-gray;
 }
@@ -8,6 +5,15 @@ $hero-height: 60vh;
 
 .text-padding{
   padding:0 2em;
+}
+.text-padding-right{
+  padding-right:3em;
+}
+.text-padding-left{
+  padding-left: 2em;
+}
+.heading-padding-left{
+  padding-left: 1em;
 }
 .hero-section {
   // background: url('https://static.pexels.com/photos/248064/pexels-photo-248064.jpeg') 50% no-repeat;
